syntax = "proto3";
import "google/protobuf/timestamp.proto";

package com.grpc.stubs.order;

option java_package = "com.grpc.stubs.order";
option java_multiple_files = true;

service OrderService {
	rpc getOrdersForUser(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
	string username =  1;
}

message OrderResponse {
	repeated Order order = 1;
}

message Order {
	int32 user_id = 1;
	string username = 2;
	int32 order_id = 3;
	int32 quantity = 4;
	double total_amount = 5;
	google.protobuf.Timestamp order_date = 6;
}